# spot_micro

./: .gitignore  README.md  launch_spot.sh  launch_spot1.sh  launch_spot2.sh  launch_spot_GUI.sh  launch_spot_noGUI.sh
gyroscope/: CMakeLists.txt  package.xml
gyroscope/src/: gyroscope.cpp
motion_control/: package.xml  setup.cfg  setup.py
motion_control/motion_control/: controller_input.py  defines.py  spot_controller.py
mpu6050driver/include/mpu6050driver/: mpu6050sensor.h
mpu6050driver/mpu6050driver/: mpu6050_test.py
mpu6050driver/src/: mpu6050driver.cpp
servo_driver/: package.xml  setup.py
servo_driver/servo_driver/: pca9685_server.py
spot_bringup/: CMakeLists.txt  package.xml
spot_bringup/_refs/: kinematics.py
spot_bringup/launch/: spot_app.launch.py
spot_cpp_pkg/: CMakeLists.txt  package.xml
spot_interfaces/: CMakeLists.txt  package.xml
spot_interfaces/srv/: SetServo.srv  StateMachineInfo.srv  StateMachineSet.srv
spot_py_pkg/: package.xml  setup.cfg  setup.py
spot_py_pkg/spot_py_pkg/: controller_input.py  defines.py  defines_local.py  servo_calib_90.py  servo_fun_lib.py  spot_control_class.py  spot_controller.py
spotmicro_description/: CMakeLists.txt  package.xml
spotmicro_description/launch/: display.launch.xml
spotmicro_description/rviz/: robot_conf.rviz
spotmicro_description/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro
state_machine/: CMakeLists.txt  package.xml
state_machine/src/: state_machine.cpp
